# Task1

zrintel_b2b_backend/: manage.py  pyproject.toml
zrintel_b2b_backend/zrintel/: asgi.py  settings.py  urls.py  wsgi.py
zrintel_b2b_backend/zrintel_b2b/: admin.py  apps.py  models.py  urls.py  views.py
zrintel_b2b_backend/zrintel_b2b/migrations/: 0001_initial.py
