[project]
name = "zrintel-b2b-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Hussnain Tariq",email = "hussnaintariq151@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1,<6.0)"
]

[tool.poetry]
packages = [{include = "zrintel_b2b_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
